Detailed change log :

- General
  - Added new log action "warn", designed to show a message box on error events.
  - Show message box before exit if log action is set to "fatal".
  - Added macro BX_FATAL for all cases when continuing is not recommended, since
    it can cause an application crash or incorrect simulation behaviour.

- Configure and compile
  - Added Android host platform support.

- GUI and display libraries
  - Show the runtime configuration in the Bochs VGA window (gui console) instead
    of console / xterm (rfb, sdl, sdl2, vncsrv and X11 guis).
  - SDL2: Added get/set clipboard text support.

- CPU / CPUDB
  - Bugfixes for CPU emulation correctness (critical bugfix for x86-64 and AVX opcodes emulation,
    fixed assertion failures in proc_ctrl.cc)
  ! VMX: Implemented Page Modification Logging (PML)
  ! VMX: Implemented TSC Scaling Extension
  ! Paging: Implemented Protection Keys
  ! Implemented XSAVES/XRSTORS extensions
  ! Implemented UMIP: User Mode Instruction Prevention (don't allow execution of SLDT/SIDT/SGDT/STR/SMSW with CPL>0)
  ! Implemented RDPID instruction
  ! Implemented VPOPCNTD/VPOPCNTQ AVX512 instructions
  ! CPUDB: Added AMD Ryzen configuration to CPUDB

- I/O Devices
  - Busmouse
    - Added standard bus mouse support in addition to the existing InPort
      emulation code. (patch by Ben Lunt).
  - Hard drive
    - Implemented lock mechanism for hard disk images. An image that is opened
      in r/w mode cannot be used multiple times (e.g. by another Bochs session).
    - Several fixes in some disk image modes.
  - Serial / Parallel ports
    - Added support for changing output file at runtime.
  - Networking
    - Added ethernet module 'socket', designed to interconnect Bochs instances
      with external program 'bxhub' (simulating a multi-port ethernet hub).
    - Now creating separate plugins for each network driver implementation
      (slirp, win32, etc.).
  - Sound