@@ -1,5 +1,5 @@
 .\"Document Author:  Timothy R. Butler   -   tbutler@uninetsolutions.com"
-.TH bochsrc 5 "20 Mar 2017" "bochsrc" "The Bochs Project"
+.TH bochsrc 5 "21 Mar 2017" "bochsrc" "The Bochs Project"
 .\"SKIP_SECTION"
 .SH NAME
 bochsrc \- Configuration file for Bochs.
@@ -1281,7 +1281,7 @@ Example:
 
 The vendor and device arguments should contain the vendor ID respectively the
 device ID of the PCI device you want to map within Bochs.
-.B The PCI mapping is still very experimental.
+.B The PCI mapping is still very experimental and not maintained yet.
 
 .TP
 .I "user_plugin:"
